more stuff added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <!-- Jumbotron for title heading -->
     <div class="container">
         <div class="row">
 
@@ -36,6 +37,7 @@
 
         </div>
 
+        <!-- Table for Train Schedule -->
         <div class="row">
             <div class="col-md-12">
                 <div class="card text-white bg-primary mb-3">
@@ -59,7 +61,7 @@
             </div>
 
         </div>
-
+        <!-- Form for new trains  -->
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
