--- a/index.html
+++ b/index.html
@@ -95,7 +95,14 @@
 
     </div>
 
+    <div class="row">
+        <div class="container">
+            <footer class="col-md-12 text-center footer">
+                Created by: Ismael Alexis Perez &copy;Copyright 2019 
+            </footer>
+        </div>
 
+    </div>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
